[metadata]
name = pathfinder
version = 0.1.0
description = A project to visualize some path finding algorithms
long_description = file: README.md
license = MIT
author = Patrick Heck

[options]
include_package_data = True
package_dir = =src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
